<resources>
    <string name="app_name">CarsApp</string>
    <string name="fordecosport">Ford Ecosport SE</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="motor">Motor:</string>
    <string name="color">Color:</string>
    <string name="registrovehiculo">Registro de Vehículo</string>
    <string name="botonregistrar">Registrar</string>
    <string name="automatico">Automático</string>
    <string name="mecanico">Mecánico</string>
    <string name="transmision">Tipo de Transmisión:</string>
    <string name="combustible">Tipo de Combustible:</string>
    <string name="gasolina">Gasolina</string>
    <string name="diesel">Diesel</string>
    <string name="electrico">Eléctrico</string>
    <string name="modelo2020">2020</string>

    <string-array name="colores">
        <item>--- Seleccione color ---</item>
        <item>Blanco</item>
        <item>Azul</item>
        <item>Rojo</item>
        <item>Verde</item>
        <item>Gris</item>
        <item>Negro</item>
    </string-array>

    <string name="notificaciones">Notificaciones</string>
    <string name="activar_notificaciones">Activar Notificaciones</string>
    <string name="activar_vibracion">Activar Vibración</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_register">Registro</string>
    <string name="title_preference">Preferencias</string>
    <string name="tittle_detail">Detalle</string>
    <string name="tittle_ubicacion">Ubicación</string>
    <string name="tittle_login">Login</string>
    <string name="tittle_registro">Registro</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="CarsApp">CarsApp</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="repetir_contrasena">Repita Contraseña</string>
    <string name="opcion_registrarse"><u>Si no tienes cuenta Regístrate</u></string>
</resources>