<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.poncegamez.carsappfrag.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_listFragment_to_settingsFragment"
            app:destination="@id/navigation_preferences" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.poncegamez.carsappfrag.detail.DetailFragment"
        android:label="@string/tittle_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="vehiculo"
            app:argType="com.poncegamez.carsappfrag.model.VehiculoItem" />
    </fragment>
    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.poncegamez.carsappfrag.preference.SettingsFragment"
        android:label="@string/title_preference" />
</navigation>